chore: adds new translations

--- a/src/main/resources/Server/Languages/en-US/easycommands.lang
+++ b/src/main/resources/Server/Languages/en-US/easycommands.lang
@@ -2,28 +2,28 @@ easycommands.slot = Slot
 easycommands.slots = Slots
 easycommands.config = Settings
 
-easycommands.msg.runningCommand = Running Command /{cmd}
-easycommands.msg.noCommandFoundForSlot = No configured command for slot {slotNumber}
-easycommands.msg.commandsSavedSuccessfully = Commands saved successfully!
-easycommands.msg.errorSavingCommands = Error saving commands, try again later!
-easycommands.msg.removedCommand = Removed command from slot {slotNumber}
+easycommands.msg.runningCommand = Running command: /{cmd}
+easycommands.msg.noCommandFoundForSlot = No command set for slot {slotNumber}
+easycommands.msg.commandsSavedSuccessfully = Commands saved!
+easycommands.msg.errorSavingCommands = Couldn't save commands. Try again later!
+easycommands.msg.removedCommand = Command removed from slot {slotNumber}
 
-easycommands.hud.title = My quick commands
-easycommands.hud.noCommandMsg1 = You haven't registered any commands yet.
-easycommands.hud.noCommandMsg2 = Use /cmd to start setting up your shortcuts!
+easycommands.hud.title = My commands
+easycommands.hud.noCommandMsg1 = You haven't set up any commands yet.
+easycommands.hud.noCommandMsg2 = Use /cmd to set up your commands!
 
-easycommands.cmdScreen.title = My Commands
+easycommands.cmdScreen.title = My commands
 easycommands.cmdScreen.close = Close
-easycommands.cmdScreen.registeredCommandsFor = Registered commands for {playerName}
+easycommands.cmdScreen.registeredCommandsFor = Commands for {playerName}
 easycommands.cmdScreen.save = Save
 easycommands.cmdScreen.showHud = Show Commands HUD
-easycommands.cmdScreen.hudPosition = Commands HUD Position
+easycommands.cmdScreen.hudPosition = Commands HUD position
 easycommands.cmdScreen.language = Language
-easycommands.cmdScreen.activationMode = Activation Mode
+easycommands.cmdScreen.activationMode = Activation mode
 
-easycommands.cmdScreen.hudPosition.topLeft = Top Left
-easycommands.cmdScreen.hudPosition.topRight = Top Right
-easycommands.cmdScreen.hudPosition.centerLeft = Center Left
-easycommands.cmdScreen.hudPosition.centerRight = Center Right
-easycommands.cmdScreen.hudPosition.bottomLeft = Bottom Left
-easycommands.cmdScreen.hudPosition.bottomRight = Bottom Right
+easycommands.cmdScreen.hudPosition.topLeft = Top left
+easycommands.cmdScreen.hudPosition.topRight = Top right
+easycommands.cmdScreen.hudPosition.centerLeft = Center left
+easycommands.cmdScreen.hudPosition.centerRight = Center right
+easycommands.cmdScreen.hudPosition.bottomLeft = Bottom left
+easycommands.cmdScreen.hudPosition.bottomRight = Bottom right
